CMAKE_MINIMUM_REQUIRED(VERSION 3.12)

find_package(OpenMP)

FILE(GLOB_RECURSE INCLUDES "${CMAKE_CURRENT_SOURCE_DIR}/include/*.h")
FILE(GLOB_RECURSE SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cxx")

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/include/)

ADD_LIBRARY(msceer ${SOURCES} ${INCLUDES})

TARGET_INCLUDE_DIRECTORIES(msceer 
	PUBLIC 
		$<INSTALL_INTERFACE:include>
		$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>)
TARGET_COMPILE_FEATURES(msceer PUBLIC cxx_std_11)

if(OpenMP_CXX_FOUND)
    TARGET_LINK_LIBRARIES(msceer PUBLIC OpenMP::OpenMP_CXX)
endif()         